--- a/cadastro.html
+++ b/cadastro.html
@@ -5,9 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estórias sem H - Cadastro</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
 </head>
 <body>
-    
+    <div class="header">
+        <nav class="header_toolbar">
+            <ul>
+                <li>
+                    <a href="index.html"><img src="imagem/logo.png" width="50px"></a>
+                </li>
+                <li>
+                    <a href="cadastro.html">Cadastro</a>
+                </li>
+                <li>
+                    <a href="consulta.html">Consulta</a>
+                </li>
+                <li>
+                    <a href="sair.html">Sair</a>
+                </li>
+                <li>
+                    <a href="sobre.html">Sobre</a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="header_content">
+            <figure>
+                <img src="imagem/logo.png">
+            </figure>
+            <div class="header_slogan">Estórias sem H</div>
+        </div>    
+    </div>
 </body>
 </html>
