--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estórias sem H - Home</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
 
 <body>
     <div class="header">
         <nav class="header_toolbar">
             <ul>
+                <li>
+                    <a href="index.html"><img src="imagem/logo.png" width="50px"></a>
+                </li>
                 <li>
                     <a href="cadastro.html">Cadastro</a>
                 </li>
@@ -27,16 +31,22 @@
                 </li>
             </ul>
         </nav>
-    </div>
 
-    <div class="header_content">
-        <figure>
-            <img src="imagem/logo.png">
-        </figure>
-        <div class="header_slogan">Estórias sem H</div>
+        <div class="header_content">
+            <figure>
+                <img src="imagem/logo.png">
+            </figure>
+            <div class="header_slogan">Estórias sem H</div>
+        </div>    
     </div>
-
-    <article></article>
+    <article>
+        <div class="historia-preview">
+            <header class="title">
+                Escuridão no Fim do Túnel, Além da Tranca | Rodolfo Müller
+            </header>
+            Parecia faltar pouco, o caminho com corredores, que antes multiplicavam de maneira infindáveis suas idênticas e cândidas superfícies para todas direções, começou a se simplificar, até que restasse somente um único corredor. Aquela imensidão branca...
+        </div>
+    </article>
 
     <footer>Todos os direitos reservados</footer>
 </body>
