preenchimento pag cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estórias sem H - Cadastro</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/cadastro.css" />
 </head>
+
 <body>
     <div class="header">
         <nav class="header_toolbar">
@@ -34,7 +37,24 @@
                 <img src="imagem/logo.png">
             </figure>
             <div class="header_slogan">Estórias sem H</div>
-        </div>    
+        </div>
+    </div>
+
+    <div id="div_cadast">
+        <form>
+            <label for="username">Usuário:</label>
+            <input type="text" name="username">
+            <br>
+            <label for="email">Email:</label>
+            <input type="text" name="email">
+            <br>
+            <label for="password">Senha:</label>
+            <input type="text" name="password">
+            <br>
+            <label for="rpassword">Repita a Senha:</label>
+            <input type="text" name="rpassword">
+        </form>
     </div>
 </body>
+
 </html>
