--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
                 <img src="imagem/logo.png">
             </figure>
             <div class="header_slogan">Estórias sem H</div>
-        </div>    
+        </div>
     </div>
     <article>
         <div class="historia-preview">
             <header class="title">
                 Escuridão no Fim do Túnel, Além da Tranca | Rodolfo Müller
             </header>
-            Parecia faltar pouco, o caminho com corredores, que antes multiplicavam de maneira infindáveis suas idênticas e cândidas superfícies para todas direções, começou a se simplificar, até que restasse somente um único corredor. Aquela imensidão branca...
+            Parecia faltar pouco, o caminho com corredores, que antes multiplicavam de maneira infindáveis suas
+            idênticas e cândidas superfícies para todas direções, começou a se simplificar, até que restasse somente um
+            único corredor. Aquela imensidão branca...
         </div>
     </article>
 
