inicio sobre e botao de cadastro

--- a/sobre.html
+++ b/sobre.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estórias sem H - Sobre</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/sobre.css" />
 </head>
 
 <body>
@@ -38,6 +39,12 @@
             <div class="header_slogan">Estórias sem H</div>
         </div>
     </div>
+
+    <article>
+        Estórias sem H é uma plataforma para leitura e escrita de livros, permitindo que os usuários acessem obras
+        clássicas de autores renomados ou livros de pequenos autores em início de carreira. Nosso serviço visa a
+        satisfação do cliente ao usufruir de uma plataforma gratuita, simples e confiável.
+    </article>
 </body>
 
 </html>
