--- a/cadastro.html
+++ b/cadastro.html
@@ -53,6 +53,8 @@
             <br>
             <label for="rpassword">Repita a Senha:</label>
             <input type="text" name="rpassword">
+            <br>
+            <input type="submit" value="Cadastrar" id="botao">
         </form>
     </div>
 </body>
