--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="header_toolbar">
             <ul>
                 <li>
-                    <a href="index.html"><img src="imagem/logo.png" width="50px"></a>
+                    <a href="index.html"><img src="imagem/logo.png" alt="Home" width="50px"></a>
                 </li>
                 <li>
                     <a href="cadastro.html">Cadastro</a>
@@ -44,9 +44,10 @@
             <header class="title">
                 Escuridão no Fim do Túnel, Além da Tranca | Rodolfo Müller
             </header>
+            <hr>
             Parecia faltar pouco, o caminho com corredores, que antes multiplicavam de maneira infindáveis suas
             idênticas e cândidas superfícies para todas direções, começou a se simplificar, até que restasse somente um
-            único corredor. Aquela imensidão branca...
+            único corredor. Aquela imensidão branca...<a href="">Ler Completo</a>
         </div>
     </article>
 
