--- a/cadastro.html
+++ b/cadastro.html
@@ -40,23 +40,25 @@
         </div>
     </div>
 
-    <div id="div_cadast">
-        <form>
-            <label for="username">Usuário:</label>
-            <input type="text" name="username">
-            <br>
-            <label for="email">Email:</label>
-            <input type="text" name="email">
-            <br>
-            <label for="password">Senha:</label>
-            <input type="text" name="password">
-            <br>
-            <label for="rpassword">Repita a Senha:</label>
-            <input type="text" name="rpassword">
-            <br>
-            <input type="submit" value="Cadastrar" id="botao">
-        </form>
-    </div>
+    <article>
+        <div id="div_cadast">
+            <form>
+                <label for="username">Usuário:</label>
+                <input type="text" name="username">
+                <br>
+                <label for="email">Email:</label>
+                <input type="text" name="email">
+                <br>
+                <label for="password">Senha:</label>
+                <input type="text" name="password">
+                <br>
+                <label for="rpassword">Repita a Senha:</label>
+                <input type="text" name="rpassword">
+                <br>
+                <input type="submit" value="Cadastrar" id="botao">
+            </form>
+        </div>
+    </article>
 </body>
 
 </html>
