descricao, sobre e comentarios

--- a/cadastro.html
+++ b/cadastro.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Criação do cabeçalho da página -->
     <div class="header">
         <nav class="header_toolbar">
             <ul>
@@ -40,8 +41,11 @@
         </div>
     </div>
 
+    <!-- Formulário para cadastrar usuários -->
     <article>
-        <div id="div_cadast">
+        <div>
+            <h1>Cadastro</h1>
+            <hr>
             <form>
                 <label for="username">Usuário:</label>
                 <input type="text" name="username">
