--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Criação do cabeçalho da página -->
     <div class="header">
         <nav class="header_toolbar">
             <ul>
@@ -39,6 +40,8 @@
             <div class="header_slogan">Estórias sem H</div>
         </div>
     </div>
+
+    <!-- Prévia da história criada por um usuário -->
     <article>
         <div class="historia-preview">
             <header class="title">
@@ -47,7 +50,7 @@
             <hr>
             Parecia faltar pouco, o caminho com corredores, que antes multiplicavam de maneira infindáveis suas
             idênticas e cândidas superfícies para todas direções, começou a se simplificar, até que restasse somente um
-            único corredor. Aquela imensidão branca...<a href="">Ler Completo</a>
+            único corredor. Aquela imensidão branca...<br><a href="">Ler Completo</a>
         </div>
     </article>
 
