--- a/sobre.html
+++ b/sobre.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Criação do cabeçalho da página -->
     <div class="header">
         <nav class="header_toolbar">
             <ul>
@@ -40,7 +41,10 @@
         </div>
     </div>
 
+    <!-- Artigo explicando a plataforma -->
     <article>
+        <h1>Sobre</h1>
+        <hr>
         Estórias sem H é uma plataforma para leitura e escrita de livros, permitindo que os usuários acessem obras
         clássicas de autores renomados ou livros de pequenos autores em início de carreira. Nosso serviço visa a
         satisfação do cliente ao usufruir de uma plataforma gratuita, simples e confiável.
