--- a/sair.html
+++ b/sair.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estórias sem H - Sair</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="css/sair.css" />
 </head>
 
 <body>
@@ -16,7 +15,7 @@
         <nav class="header_toolbar">
             <ul>
                 <li>
-                    <a href="index.html"><img src="imagem/logo.png" width="50px"></a>
+                    <a href="index.html"><img src="imagem/logo.png" class="logo"></a>
                 </li>
                 <li>
                     <a href="cadastro.html">Cadastro</a>
