--- a/cadastro.html
+++ b/cadastro.html
@@ -31,13 +31,6 @@
                 </li>
             </ul>
         </nav>
-
-        <div class="header_content">
-            <figure>
-                <img src="imagem/logo.png">
-            </figure>
-            <div class="header_slogan">Estórias sem H</div>
-        </div>
     </div>
 
     <!-- Formulário para cadastrar usuários -->
@@ -62,6 +55,8 @@
             </form>
         </div>
     </article>
+    
+    <footer>Todos os direitos reservados</footer>
 </body>
 
 </html>
