--- a/consulta.html
+++ b/consulta.html
@@ -31,65 +31,59 @@
                 </li>
             </ul>
         </nav>
-
-        <div class="header_content">
-            <figure>
-                <img src="imagem/logo.png">
-            </figure>
-            <div class="header_slogan">Estórias sem H</div>
-        </div>
     </div>
 
     <!-- Tabela com dados de usuários -->
     <article>
         <h1>Usuários</h1>
         <hr>
-        <table>
+        <table id="tabcons">
             <tr>
-                <th>Nome</th>
-                <th>Número de Histórias</th>
-                <th>Seguindo</th>
-                <th>Seguidores</th>
+                <th class="conscab">Nome</th>
+                <th class="conscab">Número de Histórias</th>
+                <th class="conscab">Seguindo</th>
+                <th class="conscab">Seguidores</th>
             </tr>
             <tr>
-                <td>Rodolfo</td>
-                <td>10</td>
-                <td>2</td>
-                <td>500000</td>
+                <td class="conscont">Rodolfo</td>
+                <td class="conscont">10</td>
+                <td class="conscont">2</td>
+                <td class="conscont">500000</td>
             </tr>
             <tr>
-                <td>Machado de Assis</td>
-                <td>50</td>
-                <td>0</td>
-                <td>100</td>
+                <td class="conscont">Machado de Assis</td>
+                <td class="conscont">50</td>
+                <td class="conscont">0</td>
+                <td class="conscont">100</td>
             </tr>
             <tr>
-                <td>José de Alencar</td>
-                <td>20</td>
-                <td>0</td>
-                <td>50</td>
+                <td class="conscont">José de Alencar</td>
+                <td class="conscont">20</td>
+                <td class="conscont">0</td>
+                <td class="conscont">50</td>
             </tr>
             <tr>
-                <td>Adriana</td>
-                <td>0</td>
-                <td>100</td>
-                <td>50</td>
+                <td class="conscont">Adriana</td>
+                <td class="conscont">0</td>
+                <td class="conscont">100</td>
+                <td class="conscont">50</td>
             </tr>
             <tr>
-                <td>Gregório</td>
-                <td>7</td>
-                <td>768</td>
-                <td>649</td>
+                <td class="conscont">Gregório</td>
+                <td class="conscont">7</td>
+                <td class="conscont">768</td>
+                <td class="conscont">649</td>
             </tr>
             <tr>
-                <td>Maria</td>
-                <td>237</td>
-                <td>7408</td>
-                <td>415</td>
+                <td class="conscont">Maria</td>
+                <td class="conscont">237</td>
+                <td class="conscont">7408</td>
+                <td class="conscont">415</td>
             </tr>
         </table>
     </article>
 
+    <footer>Todos os direitos reservados</footer>
 </body>
 
 </html>
