--- a/sair.html
+++ b/sair.html
@@ -31,31 +31,26 @@
                 </li>
             </ul>
         </nav>
-
-        <div class="header_content">
-            <figure>
-                <img src="imagem/logo.png">
-            </figure>
-            <div class="header_slogan">Estórias sem H</div>
-        </div>
     </div>
 
     <!-- Formulário para que usuários loguem -->
-    <article>
+    <article id="log">
         <div>
             <h1>Login</h1>
             <hr>
             <form>
-                <label for="email">Email:</label>
-                <input type="text" name="email">
+                <label class="extable" for="email">Email:</label>
+                <input type="text" name="email" class="inplog">
                 <br>
-                <label for="password">Senha:</label>
-                <input type="text" name="password">
+                <label class="extable" for="password">Senha:</label>
+                <input type="text" name="password" class="inplog">
                 <br>
-                <input type="submit" value="Entrar" id="botao">
+                <input type="submit" value="Entrar" class="inplog" id="btn">
             </form>
         </div>
     </article>
+    
+    <footer>Todos os direitos reservados</footer>
 </body>
 
 </html>
