--- a/sobre.html
+++ b/sobre.html
@@ -31,13 +31,6 @@
                 </li>
             </ul>
         </nav>
-
-        <div class="header_content">
-            <figure>
-                <img src="imagem/logo.png">
-            </figure>
-            <div class="header_slogan">Estórias sem H</div>
-        </div>
     </div>
 
     <!-- Artigo explicando a plataforma -->
@@ -48,6 +41,8 @@
         clássicas de autores renomados ou livros de pequenos autores em início de carreira. Nosso serviço visa a
         satisfação do cliente ao usufruir de uma plataforma gratuita, simples e confiável.
     </article>
+    
+    <footer>Todos os direitos reservados</footer>
 </body>
 
 </html>
